changed css to prevent bottom elements from being truncated

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4,6 +4,10 @@
   text-align: center;
 }
 
+.slider {
+  height:100vh;
+}
+
 .slot {
   position: relative;
   display: inline-block;
@@ -17,6 +21,7 @@ section {
   border: 3px solid black !important;
   width: 70px;
   height: 70px;
+  line-height:0;
   overflow: hidden;
   background-color: grey;
   border-radius: 2px;
@@ -88,13 +93,11 @@ section {
 }
 
 .card-body {
-  padding: 0px;
   background: rgba(200, 197, 200, 0.7);
   color: white;
 }
 
 .card {
-  padding: 0px;
   background: rgba(0, 0, 0, 0.5);
 }
 
